--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,6 @@ jobs:
       - name: Install yarn
         run: npm install -g yarn
 
-      - name: Install firebase CLI
-        run: npm install -g firebase-tools
-
       - name: Install dependencies
         run: yarn
 
@@ -43,4 +40,4 @@ jobs:
 
       - name: Build Android App Bundle
         run: |
-          cd android && ENVFILE=.env.dev ./gradlew assembledevRelease --no-daemon
+          cd android && ENVFILE=.env.dev ./gradlew assembleRelease --no-daemon
