--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,10 @@ jobs:
 
       - name: Install yarn
         run: npm install -g yarn
+        
+      - name: Install firebase CLI
+        run: npm install -g firebase-tools
+
 
       - name: Install dependencies
         run: yarn
@@ -42,11 +46,11 @@ jobs:
         run: |
           cd android && ENVFILE=.env.dev ./gradlew assembleRelease --no-daemon
       - name: Distribute app via Firebase App Distribution
-          env:
-            firebaseToken: 1//0eFBQn97fYcTfCgYIARAAGA4SNwF-L9IrZj_umZ2D_EhVyxaLVTnCjw20U4BtWa6L76Yp6ODkAS6wf9YGVMlp_uBxD0JlQMya_w0
-            firebaseGroups: tester
-            firebaseAppId: 1:588230522245:android:4ec545ad1d1125de6c80ec
-            notes: ${{ github.event.head_commit.message }}
+        env:
+          firebaseToken: 1//0eFBQn97fYcTfCgYIARAAGA4SNwF-L9IrZj_umZ2D_EhVyxaLVTnCjw20U4BtWa6L76Yp6ODkAS6wf9YGVMlp_uBxD0JlQMya_w0
+          firebaseGroups: tester
+          firebaseAppId: 1:588230522245:android:4ec545ad1d1125de6c80ec
+          notes: ${{ github.event.head_commit.message }}
           run: |
             yarn global add firebase-tools
             export PATH="$(yarn global bin):$PATH"
