fix missing react-native-monorepo-tools app customer

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -6,5 +6,9 @@
     "peerDependencies": {
       "react": "*",
       "react-native": "*"
+    },
+    "devDependencies": {
+      "@types/react": "17.0.5",
+      "@types/react-native": "0.67.3"
     }
-  }
+}
