--- a/packages/customer/package.json
+++ b/packages/customer/package.json
@@ -14,7 +14,9 @@
     "react": "17.0.2",
     "react-native": "0.68.0",
     "react-native-svg": "^12.3.0",
-    "react-native-vector-icons": "^9.1.0"
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-image-picker":"*",
+    "react-native-device-info": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
