--- a/packages/customer/ios/customer/Info.plist
+++ b/packages/customer/ios/customer/Info.plist
@@ -37,6 +37,34 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+  <key>UIAppFonts</key>
+  <array>
+    <string>Inter-Black.ttf</string>
+    <string>Inter-Bold.ttf</string>
+    <string>Inter-ExtraBold.ttf</string>
+    <string>Inter-ExtraLight.ttf</string>
+    <string>Inter-Light.ttf</string>
+    <string>Inter-Medium.ttf</string>
+    <string>Inter-Regular.ttf</string>
+    <string>Inter-SemiBold.ttf</string>
+    <string>Inter-Thin.ttf</string>
+    <string>AntDesign.ttf</string>
+    <string>Entypo.ttf</string>
+    <string>EvilIcons.ttf</string>
+    <string>Feather.ttf</string>
+    <string>FontAwesome.ttf</string>
+    <string>FontAwesome5_Brands.ttf</string>
+    <string>FontAwesome5_Regular.ttf</string>
+    <string>FontAwesome5_Solid.ttf</string>
+    <string>Fontisto.ttf</string>
+    <string>Foundation.ttf</string>
+    <string>Ionicons.ttf</string>
+    <string>MaterialCommunityIcons.ttf</string>
+    <string>MaterialIcons.ttf</string>
+    <string>Octicons.ttf</string>
+    <string>SimpleLineIcons.ttf</string>
+    <string>Zocial.ttf</string>
+  </array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
