--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -8,7 +8,7 @@
       "react-native": "*"
     },
     "devDependencies": {
-      "@types/react": "17.0.5",
-      "@types/react-native": "0.67.3"
+      "@types/react": "*",
+      "@types/react-native": "*"
     }
 }
