--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "react-native start",
+    "start": "react-native start --reset-cache",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
@@ -13,7 +13,8 @@
     "@my-app/app": "*",
     "react": "17.0.2",
     "react-native": "0.68.0",
-    "react-native-image-picker": "^4.7.3"
+    "react-native-image-picker": "^4.7.3",
+    "react-native-device-info": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -25,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "babel-jest": "^26.6.3",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.67.0",
