--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "**/react-native",
       "**/react-native/**",
       "**/@react-native/**",
+      "react-native-biometrics",
       "react",
       "react/**",
       "@react-navigation",
@@ -24,6 +25,7 @@
   "scripts": {
     "reset": "find . -type dir -name node_modules | xargs rm -rf && rm -rf yarn.lock",
     "android:mobile": "yarn workspace @my-app/mobile android",
+    "pod:mobile": "yarn workspace @my-app/mobile pod-install",
     "android:customer": "yarn workspace @my-app/customer android",
     "android:myapp": "yarn workspace @my-app/testmyapp android-stg",
     "ios:mobile": "yarn workspace @my-app/mobile ios",
