--- a/.github/workflows/dev-mobile-1.yml
+++ b/.github/workflows/dev-mobile-1.yml
@@ -27,36 +27,9 @@ jobs:
         
       - name: Install firebase CLI
         run: npm install -g firebase-tools
-
-
-      - name: Install dependencies
-        run: yarn
-
-      - name: Make Gradlew Executable
-        run: cd android && chmod +x ./gradlew
-
-      - name: Update gradle version for Android
-        uses: damienaicheh/update-android-version-gradle-action@v1.0.0
-        with:
-          build-gradle-path: packages/mobile/android/app/build.gradle
-          version-code: ${{ github.run_number }}
-          print-file: true
-
-      - name: Build Android App Bundle
+  apk:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Env writer
         run: |
-          cd android && ENVFILE=.env.dev ./gradlew assembleRelease --no-daemon
-      - name: Distribute app via Firebase App Distribution
-        env:
-          firebaseToken: 1//0eFBQn97fYcTfCgYIARAAGA4SNwF-L9IrZj_umZ2D_EhVyxaLVTnCjw20U4BtWa6L76Yp6ODkAS6wf9YGVMlp_uBxD0JlQMya_w0
-          firebaseGroups: tester
-          firebaseAppId: 1:588230522245:android:4ec545ad1d1125de6c80ec
-          notes: ${{ github.event.head_commit.message }}
-        run: |
-          yarn global add firebase-tools
-          export PATH="$(yarn global bin):$PATH"
-          firebase \
-            appdistribution:distribute android/app/build/outputs/apk/release/app-release.apk \
-            --app $firebaseAppId \
-            --release-notes "$notes" \
-            --groups "$firebaseGroups" \
-            --token "$firebaseToken"
+          echo "aaaaaaaaaaaaaaaaaaaaaaa"
