--- a/.github/workflows/dev-mobile-1.yml
+++ b/.github/workflows/dev-mobile-1.yml
@@ -14,9 +14,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@master
       - uses: actions/setup-python@v2
-      - name: Env writer
-        run: |
-          echo "ENV=DEV" >> .env.dev
       - name: Use Node 14
         uses: actions/setup-node@v2
         with:
@@ -24,12 +21,19 @@ jobs:
 
       - name: Install yarn
         run: npm install -g yarn
-        
-      - name: Install firebase CLI
-        run: npm install -g firebase-tools
+
   apk:
     runs-on: ubuntu-latest
     steps:
       - name: Env writer
         run: |
           echo "aaaaaaaaaaaaaaaaaaaaaaa"
+          
+  setup:
+    name: Install library and cache
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - name: OK
+        run:  |
+          echo "oke"
